[gd_scene load_steps=6 format=3 uid="uid://druyrnvfcppjb"]

[ext_resource type="Texture2D" uid="uid://c1x4x0kw8kvcc" path="res://assets/everything.png" id="1_7ok2f"]
[ext_resource type="Script" uid="uid://cwo3smh73qq36" path="res://scenes/items/dough.gd" id="1_hl5ja"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hl5ja"]
atlas = ExtResource("1_7ok2f")
region = Rect2(0, 0, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_volpc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hl5ja")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_55jcw"]
radius = 42.0

[node name="Dough" type="Node2D"]
script = ExtResource("1_hl5ja")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_volpc")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2, 13)
shape = SubResource("CircleShape2D_55jcw")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
